<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp"
    tools:context=".ui.ui.loginregister.OtpInputFragment">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/guide_input_code_otp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_smartphone_black_24dp"
        app:counterEnabled="true"
        app:counterMaxLength="6"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_otp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:maxLength="6"
            android:inputType="number"
            android:hint="@string/otp_code_digit" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_otp_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verification"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_resend_otp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kirim ulang kode OTP"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>