<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".ui.ui.profile.ProfileFragment">

    <LinearLayout
        android:id="@+id/layout_profil"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:src="@drawable/ic_profile_black_24dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_name_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            android:text="@string/value_name_profile" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_faculty_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:text="@string/value_faculty_name" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_leaderboard"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/browser_actions_bg_grey"
        android:gravity="start|center_vertical"
        android:paddingStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/leaderboard"
        android:textColor="@color/black"
        app:icon="@drawable/ic_leaderboard_black_24dp"
        app:iconPadding="@dimen/activity_horizontal_margin"
        app:iconTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/layout_profil"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/browser_actions_bg_grey"
        android:gravity="start|center_vertical"
        android:paddingStart="16dp"
        android:text="@string/log_out"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:icon="@drawable/ic_exit_black_24dp"
        app:iconPadding="@dimen/activity_horizontal_margin"
        app:iconTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btn_leaderboard"
        tools:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>