<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ui.detail.DetailLocationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map_distance_ub"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background"/>

        <ImageButton
            android:id="@+id/btn_show_village_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/map_distance_ub"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_village_image_48dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_date_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/date_add"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/map_distance_ub" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_value_date_add"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/value_date"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.322"
            app:layout_constraintStart_toEndOf="@id/tv_date_add"
            app:layout_constraintTop_toTopOf="@id/tv_date_add" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_contact"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Kontak yang menambahkan"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date_add" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_value_contact"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/value_date"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@id/tv_contact"
            app:layout_constraintTop_toTopOf="@id/tv_contact" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_village_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/village_detail_name"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_contact"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_value_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/value_detail_name"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/btn_show_village_image"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toEndOf="@id/tv_village_detail_name"
            app:layout_constraintTop_toTopOf="@id/tv_village_detail_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_detail_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_role"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_village_detail_name"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_value_detail_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="value detail role"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tv_detail_role"
            app:layout_constraintTop_toTopOf="@id/tv_detail_role"
            app:layout_constraintEnd_toStartOf="@id/btn_show_village_image"
            app:layout_constraintHorizontal_bias="0.05"
            android:layout_marginStart="16dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_problem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:text="Permasalahan Desa"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_value_detail_role"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_value_problem"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/value_problem"
            app:layout_constraintStart_toEndOf="@id/tv_problem"
            android:layout_marginStart="16dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintTop_toTopOf="@id/tv_problem" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_sector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Sektor Pengembangan Desa"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_problem" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_value_sector"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/value_sector"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toEndOf="@id/tv_sector"
            app:layout_constraintTop_toTopOf="@id/tv_sector" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_work_activities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Program Kerja Desa"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sector" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_value_work_activities"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/value_work_activities"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toEndOf="@id/tv_work_activities"
            app:layout_constraintTop_toTopOf="@id/tv_work_activities" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_tourist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="Nama Tempat Wisata Terdekat"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_work_activities" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_value_tourist"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/value_work_activities"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toEndOf="@id/tv_tourist"
            app:layout_constraintTop_toTopOf="@id/tv_tourist" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>